@@ -1,3 +1,4 @@
+ - MeshFunctions in python now support iterable protocol
  - Expose ufc::dofmap::tabulate_entity_dofs to GenericDofMap interface
  - Expose ufc::dofmap::num_entity_dofs to GenericDofMap interface
  - Allow setting of row dof coordinates in preconditioners (only works with PETSc backed for now)
